--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ target/
 !**/src/test/**/target/
 
 ### property ###
-!**/src/main/resources/*.properties
+**.properties
 
 ### STS ###
 .apt_generated
