--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port= 8070
 spring.datasource.driverClassName= com.mysql.cj.jdbc.Driver
-spring.datasource.url= jdbc:mysql://localhost:3306/electronics_express
+spring.datasource.url= jdbc:mysql://localhost:3306/redis_cache
 spring.datasource.username= root
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL8Dialect
