--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ target/
 !**/src/test/**/target/
 
 ### property ###
-**.properties
+src/main/resources/application.properties
 
 ### STS ###
 .apt_generated
