implemented caching with redis

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.datasource.url= jdbc:mysql://localhost:3306/redis_cache
 spring.datasource.username= root
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL8Dialect
+
+spring.redis.host= localhost
+spring.redis.port= 6379
+spring.cache.redis.key-prefix= sr
+spring.cache.cache-names=users
+spring.cache.redis.time-to-live=600000
