Used cache evict on put, create and delete methods

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.redis.host= localhost
 spring.redis.port= 6379
 spring.cache.redis.key-prefix= sr
 spring.cache.cache-names=users
-spring.cache.redis.time-to-live=600000
+#spring.cache.redis.time-to-live=600000
